--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ local.properties
 .classpath
 .settings/
 .loadpath
+.idea/
+.idea/vcs.xml
 
 # External tool builders
 .externalToolBuilders/
@@ -28,6 +30,11 @@ local.properties
 # PDT-specific
 .buildpath
 
+# PHP Composer
+vendor/
+
+#VS Code
+.vscode/
 
 #################
 ## Visual Studio
